--- a/LabProject/Content/HomeStyle.css
+++ b/LabProject/Content/HomeStyle.css
@@ -98,7 +98,7 @@
     flex-direction: column;
     align-items: center;
     justify-content: space-around;
-    
+   
 }
 
 
@@ -120,4 +120,14 @@
     position: absolute;
     width: 60%;
     right: 0;
+}
+
+#login_btn {
+    width: 70%;
+    height: 20%;
+    border: 1px solid black;
+    border-radius: 20px;
+    font-weight: bold;
+   
+    cursor: pointer;
 }
