add administrator controller and view

--- a/LabProject/Content/HomeStyle.css
+++ b/LabProject/Content/HomeStyle.css
@@ -120,6 +120,9 @@
     position: absolute;
     width: 60%;
     right: 0;
+    display: flex;
+    flex-flow:column;
+    border: 2px solid black;
 }
 
 #login_btn {
