--- a/LabProject/Content/HomeStyle.css
+++ b/LabProject/Content/HomeStyle.css
@@ -1,17 +1,18 @@
-﻿body {
+﻿/*body {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
     font-family: 'Lucida Sans';
 }
-
+*/
 
 .home_page {
-
     position: relative;
+  
     width: 100%;
-    height: 100vh;
-    background-color: rgb(75,75,75);
+    height: 90vh;
+
+    
     display: flex;
 }
 
@@ -36,7 +37,7 @@
     position: relative;
     display: flex;
     flex-direction: column;
-    
+
    
     transform: translate(-50%, 0%);
     height: 35vh;
@@ -51,13 +52,10 @@
     list-style-type: none;
     width: 100%;
     height: 20%;
-    
     display: flex;
     flex-direction: row;
     justify-content: space-between;
-   
 
-   
 }
 
 .user_selector li {
@@ -98,7 +96,7 @@
     flex-direction: column;
     align-items: center;
     justify-content: space-around;
-   
+
 }
 
 
@@ -131,6 +129,11 @@
     border: 1px solid black;
     border-radius: 20px;
     font-weight: bold;
-   
+   transform: translateY(100%);
     cursor: pointer;
+}
+
+#password_submit {
+    font: small-caption;
+    font-size: 16px
 }
