--- a/LabProject/Content/Site.css
+++ b/LabProject/Content/Site.css
@@ -1,25 +1,52 @@
-﻿body {
-    padding-top: 50px;
-    padding-bottom: 20px;
+﻿*{
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
 }
 
-/* Set padding to keep content from hitting the edges */
+.navbar {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+    height: 5vh;
+    width: 100%;
+    position: absolute;
+    z-index: 1;
+    background-image: linear-gradient(60deg, #4cff00 0%, #fbed96 50%, #ffffff 100%);
+}
+
+
+.all-site {
+    position: relative;
+    display: flex;
+
+    width: 100%;
+    height: 100vh;
+}
+
 .body-content {
-    padding-left: 15px;
-    padding-right: 15px;
+    background-color: rgb(75,75,75);
+    position: absolute;
+    transform: translateY(5vh);
+    width: 100%;
+    height: 90vh;
 }
 
-/* Override the default bootstrap behavior where horizontal description lists 
-   will truncate terms that are too long to fit in the left column 
-*/
-.dl-horizontal dt {
-    white-space: normal;
+.footer {
+    position: absolute;
+    transform: translateY(95vh);
+    width: 100%;
+    height: 5vh;
+    z-index: 1;
+    display: flex;
+    align-items: center;
+    background-image: linear-gradient(60deg, #ffffff 0%, #fbed96 50%, #4cff00 100%);
+    font-size: large;
 }
 
-/* Set width on the form input elements since they're 100% wide by default */
-input,
-select,
-textarea {
-    max-width: 280px;
-}
 
+
+#logout-btn {
+    cursor: pointer;
+}
