--- a/LabProject/Views/Shared/_Layout.cshtml
+++ b/LabProject/Views/Shared/_Layout.cshtml
@@ -3,38 +3,47 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>@ViewBag.Title - My ASP.NET Application</title>
-    @Styles.Render("~/Content/css")
-    @Scripts.Render("~/bundles/modernizr")
+    <title>Software Engineering department</title>
+    <link href="~/Content/Site.css" rel="stylesheet" />
+    <script src="~/Scripts/jquery-3.3.1.js"></script>
+    <script type="text/javascript">
+
+        $(document).ready(function () {
+            $("#logout-btn").click(function (e) {
+                document.getElementById('logout-btn').style.textDecoration = "underline";
+                setTimeout(function () {
+                     document.getElementById('logout-btn').style.textDecoration = "none";       
+                   
+                }, 150);
+     
+            });
+        });
+
+    </script>
 </head>
 <body>
-    <div class="navbar navbar-inverse navbar-fixed-top">
-        <div class="container">
-            <div class="navbar-header">
-                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                </button>
-                @Html.ActionLink("Application name", "Index", "Home", new { area = "" }, new { @class = "navbar-brand" })
-            </div>
-            <div class="navbar-collapse collapse">
-                <ul class="nav navbar-nav">
-                </ul>
-            </div>
+    <div class="all-site">
+        <div class="navbar">
+            @{
+                if (Session["firstName"] != null)
+                {
+                    <p id="navbar-hello-user">
+                        Hello - @Session["firstName"] @Session["lastName"]
+                    </p>
+                    <p id="logout-btn">LogOut</p>
+                }
+            }
         </div>
+
+        <div class="footer">
+            <p>&copy; @DateTime.Now.ToString().Substring(0, DateTime.Now.ToString().IndexOf(" ")) - Software Engineering Department</p>
+        </div>
+
+        <div class="body-content">
+            @RenderBody() 
+        </div>
+
     </div>
 
-    <div class="container body-content">
-        @RenderBody()
-        <hr />
-        <footer>
-            <p>&copy; @DateTime.Now.Year - My ASP.NET Application</p>
-        </footer>
-    </div>
-
-    @Scripts.Render("~/bundles/jquery")
-    @Scripts.Render("~/bundles/bootstrap")
-    @RenderSection("scripts", required: false)
 </body>
 </html>
