--- a/LabProject/Content/AdministratorManageLecturers.css
+++ b/LabProject/Content/AdministratorManageLecturers.css
@@ -1,33 +1,72 @@
-﻿.ManageLecturers-content {
-   
-    border: 2px solid red;
+﻿.manageLecturers-all{
+    position: relative;
+    display: flex;
+    flex-direction: column;
+}
+
+.add_update-content {
+    position: absolute;
+    height: 80%;
+    width: 40%;
+    display: flex;
+    transform: translate(75vh, -89.5%);  
+}
+
+
+.add_update-content li {
+    list-style-type: none;
+}
+
+.ManageLecturers-content {
     transform: translate(10%, 10%);
     height: 80%;
-    width: 80%;
+    width: 40%;
     display: flex;
     position: relative;
+
+}
+
+.update{
+    position: absolute;
+    transform: translate(40vh, 30%);
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+    height: 40vh;
+}
+
+.update select {
+    height: 30px;
 }
 
 .inputs {
- 
     height: 80%;
     left: 0;
     transform: translateY(15%);
     position: absolute;
-    width: 60%;
+    width: 80%;
     display: flex;
     flex-direction: column;
     justify-content: space-around;
 }
 
-.inputs select, input {
+.inputs input {
     width: 70%;
     height: 30px;
 
+
+}
+
+.inputs select {
+    width: 70%;
+    height: 30px;
+}
+
+.validation-messages li {
+    list-style-type: none;
 }
 
 .validation-messages {
- 
     height: 80%;
     transform: translateY(15%);
     position: absolute;
@@ -44,13 +83,33 @@ h2 {
 
 
 .ManageLecturers-content p {
-    border: 1px solid black;
+
     width: 100%;
     height: 30px;
 }
 
 #add-btn{
     position: absolute;
-    transform: translate(20vh, 2vh);
-    width: 10%;
+    transform: translate(10vh, 60vh);
+    width: 30%;
+}
+
+#update-btn {
+    position: absolute;
+    transform: translate(40vh, 60vh);
+    width: 30%;
+    
+}
+
+
+
+#addcoursetolecturer {
+    position: absolute;
+    transform: translate(20%, 10vh);
+}
+
+#updateGrade {
+    border: 2px solid green;
+    height: 5vh;
+   transform: translate(80%, 1vh);
 }
