--- a/LabProject/Content/AdministratorStyle.css
+++ b/LabProject/Content/AdministratorStyle.css
@@ -1,9 +1,10 @@
 ﻿.Administrator-Home {
-    position: relative;
+    position: absolute;
     width: 100%;
     height: 90vh;
     display: flex;
     flex-direction: row;
+  
 }
 
 
